Fix checklist dropdown menu overflow

--- a/Client/src/app/components/checklist-set-card/checklist-set-card.css
+++ b/Client/src/app/components/checklist-set-card/checklist-set-card.css
@@ -7,7 +7,6 @@
     margin: 0px;
     box-sizing: border-box;
     height: 100%;
-    overflow: hidden;
 }
 
 .card-header {
